<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/english"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        android:title="@string/english">
    </item>
    <item
        android:id="@+id/hindi"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        android:title="@string/hindi">
    </item>
    <item
        android:id="@+id/tamil"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        android:title="@string/tamil">
    </item>
    <item
        android:id="@+id/marathi"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        android:title="@string/marathi">
    </item>
    <item
        android:id="@+id/telugu"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        android:title="@string/telugu">
    </item>
    <item
        android:id="@+id/kannada"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        android:title="@string/kannada">
    </item>
    <item
        android:id="@+id/punjabi"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        android:title="@string/punjabi">
    </item>
    <item
        android:id="@+id/malayalam"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        android:title="@string/malayalam">
    </item>
    <item
        android:id="@+id/gujarati"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        android:title="@string/gujarati">
    </item>
    <item
        android:id="@+id/bengali"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        android:title="@string/bengali">
    </item>
    <!--
    <item
        android:id="@+id/action_more"
        android:icon="@android:drawable/ic_menu_more"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="More">
        <menu>
            <item
                android:id="@+id/action_one"
                android:icon="@android:drawable/ic_popup_sync"
                android:title="Sync"/>
            <item
                android:id="@+id/action_two"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="About"/>
        </menu>
    </item>
    -->

</menu>