<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/etMobileLogin"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_selector"
        android:ems="10"
        android:hint="@string/driverMobile"
        android:inputType="number"
        android:maxLength="10"
        android:padding="10dp"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPwLogin"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_selector"
        android:ems="10"
        android:hint="@string/password"
        android:imeOptions="flagNoExtractUi|actionDone"
        android:inputType="textPassword"
        android:maxLength="30"
        android:padding="10dp"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tvForgotPw"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/forgotPwd" />

        <Button
            android:id="@+id/btLogin"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/selector_button"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>