<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/fpwdMobile"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_selector"
        android:ems="10"
        android:hint="@string/driverMobile"
        android:imeOptions="flagNoExtractUi"
        android:inputType="number"
        android:maxLength="10"
        android:padding="10dp"
        android:singleLine="true" >
    </EditText>

    <LinearLayout
        android:id="@+id/reqBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelBtn"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button"
            android:gravity="center"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/submitBtn"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button"
            android:gravity="center"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>