<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/app_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etNamePersonalSignup"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/edittext_selector"
            android:ems="10"
            android:hint="@string/driverName"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:maxLength="30"
            android:padding="12dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/jugunoo_edittext_cursor_color" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etPwPersonalSignup"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/edittext_selector"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="30"
            android:padding="12dp"
            android:textCursorDrawable="@drawable/jugunoo_edittext_cursor_color" >
        </EditText>

        <EditText
            android:id="@+id/etCpwPersonalSignup"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/edittext_selector"
            android:ems="10"
            android:hint="@string/cpassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="30"
            android:padding="12dp"
            android:textCursorDrawable="@drawable/jugunoo_edittext_cursor_color" >
        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etEmailPersonalSignup"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_selector"
                android:ems="10"
                android:hint="@string/regEmail"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions|textWebEmailAddress"
                android:padding="12dp"
                android:textCursorDrawable="@drawable/jugunoo_edittext_cursor_color" >
            </EditText>

            <ProgressBar
                android:id="@+id/progMailPersonalSignup"
                style="?android:attr/progressBarStyleInverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/etEmailCorporateSignup"
                android:visibility="invisible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp" >

            <TextView
                android:id="@+id/tvCountryCodePersonalSignup"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:layout_weight="3.5"
                android:background="@drawable/edittext_selector"
                android:gravity="center"
                android:text="+91" />

            <EditText
                android:id="@+id/etMobilePersonalSignup"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="7dp"
                android:layout_weight="0.5"
                android:background="@drawable/edittext_selector"
                android:ems="10"
                android:hint="@string/driverMobile"
                android:inputType="number"
                android:maxLength="10"
                android:padding="14dp"
                android:textCursorDrawable="@drawable/jugunoo_edittext_cursor_color" >
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/btVerifyPersonalSignup"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="7dp"
            android:background="@drawable/selector_button"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/verify" />
    </LinearLayout>

</ScrollView>